# rdma

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: client.c
common/: CMakeLists.txt
common/inc/: common.h
common/src/: common.c
server/: CMakeLists.txt
server/src/: server.c
